--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Victor Soto"
-  avatar           : "profile.png"
+  avatar           : "profilePic.jpg"
   bio              : "Your biography for the left-hand sidebar"
   location         : "Ottawa,ON"
   employer         :
