--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 locale                   : "en-US"
 title                    : "Victor Soto"
 title_separator          : "-"
-name                     : &name "Your Name"
+name                     : &name "Victor Soto"
 description              : &description "personal description"
 url                      : https://vsotog.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
