--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,22 +1,20 @@
 # main links links
 main:
+  
+  - title: "Education"
+    url: /education/    
+    
+  - title: "Professional Experience"
+    url: /experience/
+        
+  - title: "Skills"
+    url: /skills/
+  
   - title: "Publications"
     url: /publications/
 
-  - title: "Talks"
-    url: /talks/    
+  - title: "Personal Projects"
+    url: /personal/
+    
+ 
 
-  - title: "Teaching"
-    url: /teaching/    
-    
-  - title: "Portfolio"
-    url: /portfolio/
-        
-  - title: "Blog Posts"
-    url: /year-archive/
-    
-  - title: "CV"
-    url: /cv/
-    
-  - title: "Guide"
-    url: /markdown/
