--- a/_config.yml
+++ b/_config.yml
@@ -7,13 +7,13 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Victor Soto"
+title                    : "Your Name / Site Title"
 title_separator          : "-"
-name                     : &name "Victor Soto"
+name                     : &name "Your Name"
 description              : &description "personal description"
-url                      : https://vsotog.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "vsotog/vsotog.github.io"
+repository               : "academicpages/academicpages.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
@@ -80,13 +80,13 @@ analytics:
 
 # Site Author
 author:
-  name             : "Victor Soto"
-  avatar           : "profilePic.jpg"
-  bio              : "Electrical and Computer Engineer"
-  location         : "Ottawa,ON"
+  name             : "Your Sidebar Name"
+  avatar           : "profile.png"
+  bio              : "Your biography for the left-hand sidebar"
+  location         : "Location"
   employer         :
-  googlescholar    : 
-  email            : "vsoto26@gmail.com"
+  googlescholar    : "http://yourfullgooglescholarurl.com"
+  email            :
   uri              :
   bitbucket        :
   codepen          :
@@ -94,19 +94,19 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "vsotog"
+  github           : "academicpages"
   google_plus      :
   keybase          :
   instagram        :
   lastfm           :
   linkedin         :
-  orcid            : 
+  orcid            : "http://orcid.org/yourorcidurl"
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          : 
+  twitter          : "replacethistwitterhandle"
   vine             :
   weibo            :
   xing             :
@@ -171,28 +171,26 @@ kramdown:
 
 # Collections
 collections:
-  skills:
-    output: true
-    permalink: /:collection/:path/
-  education:
-    output: true
-    permalink: /:collection/:path/
-  experience:
+  teaching:
     output: true
     permalink: /:collection/:path/
   publications:
     output: true
     permalink: /:collection/:path/
-  personal:
+  portfolio:
+    output: true
+    permalink: /:collection/:path/
+  talks:
     output: true
     permalink: /:collection/:path/
 
+
 # Defaults
 defaults:
-  # _skills
+  # _posts
   - scope:
       path: ""
-      type: skills
+      type: posts
     values:
       layout: single
       author_profile: true
@@ -200,17 +198,17 @@ defaults:
       comments: true
       share: true
       related: true
-  # _education
+  # _pages
   - scope:
       path: ""
-      type: education
+      type: pages
     values:
       layout: single
       author_profile: true
-  # _experience
+  # _teaching
   - scope:
       path: ""
-      type: experience
+      type: teaching
     values:
       layout: single
       author_profile: true
@@ -225,10 +223,10 @@ defaults:
       author_profile: true
       share: true
       comments: true
-  # _personal
+  # _portfolio
   - scope:
       path: ""
-      type: personal
+      type: portfolio
     values:
       layout: single
       author_profile: true
