--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Main"
+title                    : "About"
 title_separator          : "-"
 name                     : &name "Victor Soto"
 description              : &description "personal description"
