--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,6 +3,9 @@ main:
 
   - title: "Education"
     url: /education/ 
+
+  - title: "Skills"
+    url: /skills/
   
   - title: "Talks"
     url: /talks/    
@@ -20,7 +23,8 @@ main:
     url: /markdown/
 
   - title: "Publications"
-    url: /publications/
+    url: /publications
 
-  - title: "Skills"
-    url: /skills/
+  - title: "Personal Projects"
+    url: /personal
+
