--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,17 +7,17 @@ main:
   - title: "Skills"
     url: /skills/
   
-  - title: "Talks"
-    url: /talks/    
+#  - title: "Talks"
+#    url: /talks/    
       
-  - title: "Portfolio"
-    url: /portfolio/
+#  - title: "Portfolio"
+#    url: /portfolio/
         
-  - title: "Blog Posts"
-    url: /year-archive/
+#  - title: "Blog Posts"
+#    url: /year-archive/
     
-  - title: "CV"
-    url: /cv/
+#  - title: "CV"
+#    url: /cv/
     
   - title: "Guide"
     url: /markdown/
