--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,6 +4,9 @@ main:
   - title: "Education"
     url: /education/ 
 
+  - title: "Professional Experience"
+    url: /experience/
+
   - title: "Skills"
     url: /skills/
   
@@ -19,8 +22,8 @@ main:
 #  - title: "CV"
 #    url: /cv/
     
-  - title: "Guide"
-    url: /markdown/
+#  - title: "Guide"
+#    url: /markdown/
 
   - title: "Publications"
     url: /publications
