--- a/_config.yml
+++ b/_config.yml
@@ -85,7 +85,7 @@ author:
   bio              : "Electrical and Computer Engineer"
   location         : "Ottawa,ON"
   employer         :
-  googlescholar    : 
+  googlescholar    : "https://scholar.google.ca/citations?hl=en&user=4Y6ClpsAAAAJ&view_op=list_works&gmla=AJsN-F7XfWQvk33UNlKsdBRzFS6WocMEjqxw-mUfx9d1YudJOZX_M158YYYm0cfVZ02R51B3piQXwiP7P202Zf-0SWStIry568Wbv0e9TAham1-e8GvLBtw"
   email            :
   uri              :
   bitbucket        :
