--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -28,6 +28,6 @@ main:
   - title: "Publications"
     url: /publications
 
-  - title: "Personal Projects"
+  - title: "Personal Interests"
     url: /personal
 
