--- a/_config.yml
+++ b/_config.yml
@@ -99,7 +99,7 @@ author:
   keybase          :
   instagram        :
   lastfm           :
-  linkedin         :
+  linkedin         : "https://www.linkedin.com/in/victor-soto-702a00176/"
   orcid            : 
   pinterest        :
   soundcloud       :
